<resources>
    <string name="app_name">CalculatorNew</string>
    <string name="cln_btn">AC</string>
    <string name="div_btn">/</string>
    <string name="mult_btn">*</string>
    <string name="minus_btn">-</string>
    <string name="plus_btn">+</string>
    <string name="back_btn">BACK</string>
    <string name="equal_btn">=</string>
    <string name="dot_btn">.</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
</resources>