<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="end"
         />
    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:gravity="end"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/clean_btn"
            style="@style/actionBtn"
            android:text="@string/cln_btn"></TextView>
        <TextView
            android:id="@+id/div_btn"
            style="@style/actionBtn"
            android:text="@string/div_btn"></TextView>
        <TextView
            android:id="@+id/mltp_btn"
            style="@style/actionBtn"
            android:text="@string/mult_btn"></TextView>
        <TextView
            android:id="@+id/minus_btn"
            style="@style/actionBtn"
            android:text="@string/minus_btn"></TextView>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btn_9"
                style="@style/NumberBtn"
                android:text="@string/btn_9"></TextView>
            <TextView
                android:id="@+id/btn_8"
                style="@style/NumberBtn"
                android:text="@string/btn_8"></TextView>
            <TextView
                android:id="@+id/btn_7"
                style="@style/NumberBtn"
                android:text="@string/btn_7"></TextView>
            <TextView
                android:id="@+id/plus_btn"
                style="@style/actionBtn"
                android:text="@string/plus_btn"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btn_6"
                style="@style/NumberBtn"
                android:text="@string/btn_6"></TextView>
            <TextView
                android:id="@+id/btn_5"
                style="@style/NumberBtn"
                android:text="@string/btn_5"></TextView>
            <TextView
                android:id="@+id/btn_4"
                style="@style/NumberBtn"
                android:text="@string/btn_4"></TextView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/back_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.7dp"
                    android:background="#a34141"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="@string/back_btn"/>
                <TextView
                    android:id="@+id/equal_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.7dp"
                    android:background="#a34141"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:text="@string/equal_btn"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btn_3"
                style="@style/NumberBtn"
                android:text="@string/btn_3"></TextView>
            <TextView
                android:id="@+id/btn_2"
                style="@style/NumberBtn"
                android:text="@string/btn_2"></TextView>
            <TextView
                android:id="@+id/btn_1"
                style="@style/NumberBtn"
                android:text="@string/btn_1"></TextView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0.7dp"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:gravity="center"
                android:background="#706f6c"
                android:layout_weight="1"
                android:text="@string/btn_0"/>
                <TextView
                    android:id="@+id/dot_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.7dp"
                    android:textColor="@color/white"
                    android:textSize="40dp"
                    android:gravity="center"
                    android:background="#706f6c"
                    android:layout_weight="1"
                    android:text="@string/dot_btn"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>